# hattier

./: .gitignore  README.md  cabal.project  cabal.project.freeze  config.dhall  example.hs  exampleLet.hs  flake.nix  hattier.cabal  hattier.dhall
.github/workflows/: ci.yml
app/: Main.hs
data/examples/: Example.hs  ExampleCase.hs
src/: Format.hs  Hattier.hs  Types.hs
src/Hattier/: Config.hs  Format.hs  Parser.hs  Types.hs
src/Hattier/Format/: Let.hs
src/Hattier/Printer/: Combinators.hs  Core.hs  Declaration.hs  Expression.hs  Module.hs  Pattern.hs  Utils.hs
src/Hattier/Printer/Declaration/: Signature.hs  Value.hs
src/Hattier/Printer/Declaration/Signature/: Type.hs
src/Hattier/Printer/Declaration/Value/: Function.hs  Guard.hs  Let.hs
test/: Integration.hs  Main.hs
test/Integration/: Case.hs  Helpers.hs  Let.hs  Module.hs
test/Unit/: Format.hs  Parser.hs
test/Unit/Format/: Case.hs  Function.hs  Guard.hs  Import.hs  Let.hs  TypeSig.hs
