cabal-version: 3.0
name:          hattier
version:       0.1.0.0
synopsis:      Cute Haskell formatter
license:       BSD-3-Clause
license-file:  LICENSE
author:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

maintainer:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

category:      Development
build-type:    Simple

common defaults
  ghc-options:        -Wall -Werror
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

library
  import:          defaults
  hs-source-dirs:  src
  exposed-modules:
    Hattier
    Hattier.Config
    Hattier.Format
    Hattier.Parser
    Hattier.Printer.Combinators
    Hattier.Printer.Declaration
    Hattier.Printer.Declaration.Signature
    Hattier.Printer.Declaration.Signature.Type
    Hattier.Printer.Declaration.Value
    Hattier.Printer.Declaration.Value.Function
    Hattier.Printer.Expression
    Hattier.Printer.Module
    Hattier.Printer.Pattern
    Hattier.Printer.Utils
    Hattier.Types

  build-depends:
    , base
    , data-default
    , dhall
    , ghc               ^>=9.10.3
    , mtl
    , optparse-generic
    , text

executable hattier
  import:          defaults
  hs-source-dirs:  app
  main-is:         Main.hs
  autogen-modules: Paths_hattier
  other-modules:   Paths_hattier
  build-depends:
    , base
    , data-default
    , dhall
    , directory
    , filepath
    , hattier
    , optparse-generic
    , safe-exceptions
    , text

test-suite hattier-test
  import:         defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Integration
    Integration.Case
    Integration.Helpers
    Integration.Let
    Integration.Module
    Unit.Format
    Unit.Format.Case
    Unit.Format.Function
    Unit.Format.Guard
    Unit.Format.Import
    Unit.Format.Let
    Unit.Format.TypeSig
    Unit.Parser

  build-depends:
    , base
    , data-default
    , filepath
    , ghc               ^>=9.10.3
    , hattier
    , optparse-generic
    , QuickCheck
    , tasty
    , tasty-coverage
    , tasty-hunit
    , tasty-quickcheck
    , text
